<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemInfo Monitor</string>
    <string name="app_search_bar_hint">Search application</string>
    <string name="tab_spec_app">Application</string>
    <string name="tab_spec_process">Process</string>
    <string name="tab_spec_service">Service</string>
    <string name="cb_save_to_file">Save to file</string>
    <string name="err_fail_to_create_folder">Failed to create folder(.MemoryInfoMonitor).\nPlease check logcat.</string>
    <string name="msg_succeed_to_create_folder">Succeed to create folder(.MemoryInfoMonitor).</string>
    
        
        
    <string name="no_use">no_use</string>
    
    <string name="detail_process_name">detail_process_name</string>
    <string name="detail_pkg_name">detail_package_name</string>
    <string name="kill_process">kill_process</string>
    <string name="detail_process_copyright">detail_process_copyright</string>
    <string name="detail_process_install_dir">detail_process_install_dir</string>
    <string name="detail_process_data_dir">detail_process_data_dir</string>
    <string name="detail_process_package_size">detail_process_package_size</string>
    <string name="detail_process_permission">detail_process_permission</string>
    <string name="detail_process_service">detail_process_service</string>
    <string name="detail_process_activity">detail_process_activity</string>
    
    <string name="basic_activity">basic_activity: </string>
    <string name="task_id">task_id: </string>
    <string name="num_activities">num_activities: </string>
    <string name="num_running">num_running: </string>
    
    <string name="service_start_time">service_start_time: </string>
    <string name="num_client_connections">num_client_connections: </string>
    <string name="num_crash">num_crash: </string>
    <string name="service_property">service_property: </string>
    <string name="last_running_time">last_running_time: </string>
    <string name="user_id">user_id: </string>
    
        
    <string name="process_running">Process running</string>
    <string name="process_not_running">Not running</string>
    <string name="start_record_meminfo">Start recording</string>
    <string name="stop_record_meminfo">Stop</string>
    <string name="monitor_proc_name">Process Name</string>
    <string name="monitor_pkg_name">Package Name</string>
    <string name="recording_started">Recording Started</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="notification">MemoryInfo is recording %s into SD card!</string>
    <string name="notification_title">Warning!</string>
    <string name="notification_msg">%s is still being recorded!</string>
    <string name="another_service_running">%1$s(%2$s) is being recorded.You could click \&#034;Stop\&#034; button to stop it</string>

    <string name="app_data_location">data location: </string>
    <string name="process_pid">pid: </string>
    <string name="total_pss_value">Total PSS value\nPSS: the proportional set size for dalvik</string>
    
        
    <!-- ref: http://stackoverflow.com/questions/3235131/set-textview-text-from-html-formatted-string-resource-in-xml -->
    <string name="service_service_name">Service: </string>
    <string name="str_format_service_service_name">
        <![CDATA[
        <b>Service: </b>%1$s
		]]>
    </string>   
        
    <string name="service_process_name">Process: </string>
    <string name="str_format_service_process_name">
        <![CDATA[
        <b>Process: </b>%1$s (PID: %2$d)
		]]>
    </string>  
    <string name="service_active_since">Active since: </string>
    <string name="service_last_activity_time">Last activity time: </string>
    <string name="service_started_status">Started: </string>
    <string name="str_format_service_started_status">
        <![CDATA[
        <b>Started: </b>%1$b
		]]>
    </string>  
    <string name="app_progressbar_title">Please wait for loading...</string>
        
        
</resources>