<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView 
                android:textStyle="bold"
                android:background="#555555"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:text="@string/monitor_pkg_name"/>
            <TextView 
                android:id="@+id/monitor_pkg_name" 
                android:textStyle="bold"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:text="@string/detail_pkg_name"/>
            <TextView 
                android:textStyle="bold"
                android:background="#555555"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:text="@string/monitor_proc_name"/>
            <TextView 
                android:id="@+id/monitor_proc_name" 
                android:textStyle="bold"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content"
                android:text="@string/detail_process_name"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="#FFFFFF"
            />
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			<TextView 
				android:id="@+id/tmp_monitor_pss_total" 
				android:textStyle="bold"
				android:layout_centerVertical="true"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/detail_process_name"/>
			
	        <Button android:id="@+id/btn_meminfo_monitor" 
	            android:layout_width="140sp" 
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:text="@string/start_record_meminfo"/>
		</RelativeLayout>
    </LinearLayout>
</ScrollView>