<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:layout_width="40sp"
	    	android:layout_height="40sp"
	    	android:id="@+id/img_monitor_app_icon"
	    	android:src="@drawable/ic_launcher"
	    	/>
	    	
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<TextView android:id="@+id/tv_monitor_app_name"
			         android:textSize="18dip"
			         android:textStyle="bold"
			         android:layout_width="match_parent"
			         android:layout_height="wrap_content"
			         android:text="app_name"
			         />
			
				<TextView android:id="@+id/tv_monitor_app_pkg_name"
			         android:textSize="14dip"
			         android:layout_width="match_parent"
			         android:layout_height="wrap_content"
			         android:text="app_pkg_name"
			         />
			</LinearLayout>
		</LinearLayout>
		<TextView 
			android:id="@+id/tmp_monitor_pss_total" 
			android:paddingTop="15sp"
			android:paddingBottom="15sp"
			android:layout_gravity="center_horizontal"
			android:textStyle="bold"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/detail_process_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="#FFFFFF"
            />
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
			
	        <Button android:id="@+id/btn_meminfo_stop" 
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/stop_record_meminfo"/>
	        <Button android:id="@+id/btn_meminfo_start" 
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/start_record_meminfo"/>
		</LinearLayout>
    </LinearLayout>
</ScrollView>